--- a/views/home/home.html
+++ b/views/home/home.html
@@ -6,7 +6,7 @@
     <div class="row">
 
     </div>
-    <div class="col-xs-12 col-sm-12 text-center" style="margin-bottom: 25px;">
+    <div class="col-xs-12 col-sm-12 text-center" style="margin-bottom: 25px;margin-top: 25px;">
       <button type="submit" class="btn btn-w-m btn-primary col-xs-12" href="#licInfo" style="padding: 8px 25px;"
               ng-click="home.handle.nextStep()">
         <i class="fa fa-arrow-right"></i>&nbsp;下一步
