--- a/views/entAccount/entAccount.html
+++ b/views/entAccount/entAccount.html
@@ -6,59 +6,49 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
                         <div class="activity-stream">
-                            <form class="form-horizontal"
-                                  w5c-submit="adc.handle.seveInfo(adc.licInfo,'manage/updateManageCompanyMobile.do?','licInfo')"
-                                  w5c-form-validate="adc.form.validateOptions" novalidate
-                                  name="rateUserrateUser">
+                            <form class="form-horizontal">
                                 <div class="form-group">
                                     <div class="col-sm-12 col-xs-12 ">
-                                        <div class="input-group col-xs-12">
-                                            <input type="text" class="form-control"
-                                                   placeholder="商户名称" required
-                                                   ng-model="ent.parameter.companyName"
-                                                   name="companyName">
+                                        <div class="group">
+                                            <input type="text"  name="companyName" ng-model="ent.parameter.companyName"><span class="highlight"></span><span class="bar"></span>
+                                            <label>商户名称</label>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="col-sm-12 col-xs-12">
-                                        <select class="form-control col-xs-12" required
-                                                ng-model="ent.parameter.departmentCode" name="departmentCode"
-                                                ng-options="item.val as item.tit for item in bas.init.companyType">
-                                            <option disabled value="">请选择项目</option>
-                                        </select>
+                                        <div class="group">
+                                            <select ng-model="ent.parameter.departmentCode" name="departmentCode" ng-options="item.val as item.tit for item in ent.init.companyType"></select><span class="highlight"></span><span class="bar"></span>
+                                            <label>请选择项目</label>
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="col-sm-12 col-xs-12 ">
-                                        <div class="input-group col-xs-12">
-                                            <input type="text" class="form-control"
-                                                   placeholder="申请金额" required
-                                                   ng-model="ent.parameter.amount"
-                                                   name="amount">
+                                        <div class="group">
+                                            <input type="text"  name="amount" ng-model="ent.parameter.amount"><span class="highlight"></span><span class="bar"></span>
+                                            <label>申请金额</label>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="col-sm-12 col-xs-12">
-                                        <select class="form-control col-xs-12" required
-                                                ng-model="ent.parameter.seq" name="seq"
-                                                ng-options="item.val as item.tit for item in bas.init.companyType">
-                                            <option disabled value="">请选择期数</option>
-                                        </select>
+                                        <div class="group">
+                                            <select  ng-model="ent.parameter.seq" name="seq"  ng-options="item.val as item.tit for item in ent.init.companyType"></select><span class="highlight"></span><span class="bar"></span>
+                                            <label>请选择期数</label>
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="col-sm-12 col-xs-12">
-                                        <select class="form-control col-xs-12" required
-                                                ng-model="ent.parameter.consultant" name="consultant"
-                                                ng-options="item.val as item.tit for item in bas.init.companyType">
-                                            <option disabled value="">咨询师选择</option>
-                                        </select>
+                                        <div class="group">
+                                            <select  ng-model="ent.parameter.consultant" name="consultant"  ng-options="item.val as item.tit for item in ent.init.companyType"></select><span class="highlight"></span><span class="bar"></span>
+                                            <label>咨询师选择</label>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
