--- a/views/contract/contract.html
+++ b/views/contract/contract.html
@@ -3,7 +3,7 @@
          ng-class="isSmart?'smart-no-padding':''">
         <div class="container-fluid" style="padding-left: 0;padding-right: 0;margin-top: 25px;">
             <div class="col-xs-12 col-sm-12">
-                <div class="container">
+                <div class="container" style="width: 100%;padding: 0">
                     <p class="contract-title center">分期服务协议</p>
                     <p class="details right">编号：_________</p>
                     <p class="details">本合作协议（以下简称“本协议”）由以下三方于 年 月 日（“签署日”）于上海【】区（“签订地”）签订：</p>
